# CyberRC

./: .gitignore  Cargo.toml  README.md  build.rs  flake.nix
.github/workflows/: firmware-ci.yml
TeensyCyberRC/: README.md  platformio.ini
TeensyCyberRC/.pio/libdeps/teensy41/Nanopb/: .piopm
TeensyCyberRC/.pio/libdeps/teensy41/XInput/: .piopm
TeensyCyberRC/include/: nanopbSerial.h  nanopbUdp.h
TeensyCyberRC/src/: main.cpp  nanopbSerial.cpp  nanopbUdp.cpp
TeensyCyberRC/src/protos/: RCData.proto
TeensyCyberRC/test_client/: RCData_pb2.py  RCData_pb2.pyi  gui.py  requirements.txt
clients/cyberrc-cpp/: CMakelists.txt  README.md
clients/cyberrc-cpp/include/: cyberrc_bindings.h
clients/cyberrc-cpp/src/: main.cpp
clients/cyberrc-ml/: CyberRCControllerWriter.m  README.md
clients/cyberrc-ml/cyberrc/: RCDataOuterClass.java
clients/cyberrc-rs/: Cargo.toml  build.rs  cbindgen.toml  flake.nix
clients/cyberrc-rs/src/: constants.rs  lib.rs  lib_ffi.rs  main.rs
firmware/: README.md  platformio.ini
firmware/include/: config.h  nanopbSerial.h  ppm.h  utils.h
firmware/lib/PulsePosition/: PulsePositionIMXRTMod.cpp  PulsePositionIMXRTMod.h  PulsePositionMod.cpp  PulsePositionMod.h
firmware/src/: config.cpp  main.cpp  nanopbSerial.cpp  ppm.cpp
firmware/src/protos/: RCData.proto
protos/: RCData.proto
src/: build.rs  constants.rs  main.rs
