[package]
name = "cyber_rc"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
name = "cyber_rc"
path = "src/lib.rs"
build = "build.rs"

[dependencies]
anyhow = "1.0.89"
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["derive"] }
gilrs = "0.11.0"
prost = "0.13.3"
prost-build = "0.13.3"
serialport = "4.5.1"
binrw = "0.14.0"
glam = "0.29.0"
rand = "0.8.5"
tokio = { version = "1.11.0", features = ["full"] }
mockall = "0.13.0"
nalgebra = "0.33.2"
rerun = "0.20.0"

[build-dependencies]
prost-build = "0.13.3"
